<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    tools:context="com.parra.lfelipe.session1.MainActivity">
<!--Como hacer un comentario-->
<!-- -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulacio"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nombre"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/nombre"
                android:layout_height="wrap_content"
                android:id="@+id/eNombre"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/apellido"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"
                android:id="@+id/eApellido"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/celular"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/celular"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:id="@+id/eCelular"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/correo"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/correo"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/eCorreo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cuidad"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <Spinner
                android:id="@+id/sCuidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"/>
            <CheckBox android:id="@+id/cComer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/comer"/>
            <CheckBox android:id="@+id/cDeporte"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/deporte"/>
            <CheckBox android:id="@+id/cDormir"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dormir"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/greenyellow"
            android:id="@+id/bRegistrar"
            android:textSize="25sp"
            android:onClick="Registrar"
            android:text="@string/registrar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:id="@+id/tInfo"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>